# audittrail

./: CHANGELOG.md  LICENSE  MANIFEST.in  README.md  local_test_guide.md  manage.py  pyproject.toml  requirements.txt  setup.cfg
audit_trail/: __init__.py  admin.py  apps.py  middleware.py  models.py  tasks.py  urls.py
audit_trail/api/: pagination.py  permissions.py  routers.py  serializers.py  views.py
audit_trail/diffengine/: m2m_tracker.py  mixins.py  signals.py  validators.py
audit_trail/history/: service.py
audit_trail/management/commands/: audittrail_backfill.py  audittrail_clean.py  audittrail_generate_dummy_events.py  audittrail_replay.py  audittrail_stats.py
audit_trail/migrations/: 0001_initial.py
audit_trail/registry/: __init__.py  config_loader.py  registry.py
audit_trail/static/css/: audit_timeline.css
audit_trail/static/js/: audit_timeline.js
audit_trail/storage/backends/: base.py  dynamo.py  mongo.py  s3.py
audit_trail/streaming/: __init__.py  base.py  kafka.py  kinesis.py
audit_trail/summarizers/: __init__.py  grammar_nlg.py  llm_client.py  multilang_nlg.py  nltk_nlg.py  utils.py
audit_trail/templatetags/: __init__.py  audit_ui.py
audit_trail/ui/: forms.py  views.py
audit_trail/utils/: __init__.py  actor.py  crypto.py  sensitive.py  services.py
config/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: Makefile  api_reference.rst  conf.py  configuration.rst  examples.rst  streaming.rst
tests/: settings.py  urls.py
tiger_audit_trail.egg-info/: PKG-INFO  SOURCES.txt  packages.txt
(+60 files in other folders)
